fixed layout issue on project details page

--- a/src/app/project-details/project-details.component.scss
+++ b/src/app/project-details/project-details.component.scss
@@ -83,7 +83,7 @@ html{scroll-behavior: smooth;}
      }
 
 
-     .titleContainer{
+     .devtitleContainer{
       position:fixed;
       display: flex;
     flex-direction: column;
